--- a/src/pages/visualization-card/visualization-card.html
+++ b/src/pages/visualization-card/visualization-card.html
@@ -1,8 +1,8 @@
 
 <div class="visualizationCard">
   <div *ngIf="!chartObject">
-    <div text-center class="visualizationLoader">
-      <ion-spinner name="crescent" color="secondary"></ion-spinner>
+    <div class="visualizationLoader">
+      <page-loading loadingSize="large"></page-loading>
     </div>
   </div>
 
