--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -17,9 +17,9 @@
       <ion-list>
         <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
           {{ message }}
-          <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+          <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="favorite"></ion-icon>
           <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-            <ion-spinner name="crescent"></ion-spinner>
+            <page-loading loadingSize="small"></page-loading>
           </div>
         </ion-item>
       </ion-list>
