--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -21,9 +21,9 @@
           <ion-list>
             <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
               {{ message }}
-              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="favorite"></ion-icon>
               <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-                <ion-spinner name="crescent" color="secondary"></ion-spinner>
+                <page-loading loadingSize="small"></page-loading>
               </div>
             </ion-item>
           </ion-list>
