--- a/src/pages/loading/loading.html
+++ b/src/pages/loading/loading.html
@@ -1,5 +1,5 @@
-<div *ngIf="loadingSize">
-  <div *ngIf="loadingSize == 'small'">
+<span *ngIf="loadingSize">
+  <span *ngIf="loadingSize == 'small'">
 
     <svg width='40px' height='40px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-balls"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g transform="rotate(0 50 50)">
       <circle r="5" cx="30" cy="50">
@@ -18,11 +18,11 @@
       </circle>
     </g></svg>
 
-  </div>
+  </span>
 
   <div text-center *ngIf="loadingSize == 'large'">
 
-    <svg width='160px' height='160px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-balls"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g transform="rotate(0 50 50)">
+    <svg width='140px' height='140px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-balls"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g transform="rotate(0 50 50)">
       <circle r="5" cx="30" cy="50">
         <animateTransform attributeName="transform" type="translate" begin="0s" repeatCount="indefinite" dur="0.5s" values="0 0;29.999999999999996 -17.320508075688775" keyTimes="0;1"/>
         <animate attributeName="fill" dur="0.5s" begin="0s" repeatCount="indefinite"  keyTimes="0;1" values="#c5523f;#f2b736"/>
@@ -39,9 +39,11 @@
       </circle>
     </g></svg>
 
+    <div *ngIf="loadingMessage">{{ loadingMessage }}</div>
+
   </div>
 
-</div>
+</span>
 
 
 
