update arroew for accordions on setting and update manager

--- a/src/pages/setting-home/setting-home.html
+++ b/src/pages/setting-home/setting-home.html
@@ -25,8 +25,8 @@
               Synchronization
             </span>
 
-            <ion-icon *ngIf="!settingObject.synchronizationSetting.isExpanded" name="ios-arrow-forward" item-right></ion-icon>
-            <ion-icon *ngIf="settingObject.synchronizationSetting.isExpanded" name="ios-arrow-down" item-right></ion-icon>
+            <ion-icon *ngIf="!settingObject.synchronizationSetting.isExpanded" name="ios-arrow-down" item-right></ion-icon>
+            <ion-icon *ngIf="settingObject.synchronizationSetting.isExpanded" name="ios-arrow-up" item-right></ion-icon>
           </ion-item>
           <div class="settingContents" *ngIf="settingObject.synchronizationSetting.isExpanded" >
             <ion-row>
@@ -63,8 +63,8 @@
             <span [color]="(settingObject.dataEntrySetting.isExpanded) ?'current' : 'font-color'">
               Data Entry Form
             </span>
-            <ion-icon *ngIf="!settingObject.dataEntrySetting.isExpanded" name="ios-arrow-forward" item-right></ion-icon>
-            <ion-icon *ngIf="settingObject.dataEntrySetting.isExpanded" name="ios-arrow-down" item-right></ion-icon>
+            <ion-icon *ngIf="!settingObject.dataEntrySetting.isExpanded" name="ios-arrow-down" item-right></ion-icon>
+            <ion-icon *ngIf="settingObject.dataEntrySetting.isExpanded" name="ios-arrow-up" item-right></ion-icon>
           </ion-item>
           <div class="settingContents" *ngIf="settingObject.dataEntrySetting.isExpanded" >
             <ion-row>
@@ -101,8 +101,8 @@
             <!--<span [color]="(settingObject.security.isExpanded) ?'current' : 'font-color'">-->
               <!--Security-->
             <!--</span>            -->
-            <!--<ion-icon *ngIf="!settingObject.security.isExpanded" name="ios-arrow-forward" item-right></ion-icon>-->
-            <!--<ion-icon *ngIf="settingObject.security.isExpanded" name="ios-arrow-down"  item-right></ion-icon>-->
+            <!--<ion-icon *ngIf="!settingObject.security.isExpanded" name="ios-arrow-down" item-right></ion-icon>-->
+            <!--<ion-icon *ngIf="settingObject.security.isExpanded" name="ios-arrow-up"  item-right></ion-icon>-->
           <!--</ion-item>-->
           <!--<div class="settingContents" *ngIf="settingObject.security.isExpanded" >-->
             <!--<ion-row>-->
