Get metadata identifiers ready

--- a/src/pages/metadata-dictionary/metadata-dictionary.html
+++ b/src/pages/metadata-dictionary/metadata-dictionary.html
@@ -1,3 +1,6 @@
 <div >
   <page-loading loadingSize="large" loadingMessage = "dictionary coming soon"></page-loading>
+
+  {{ metadataIdentifiers |json }}
+  <br>
 </div>
