--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -111,6 +111,25 @@
             {{ progressTracker.event.passStep.length}}/{{ progressTracker.event.count}}
           </div>
         </ion-item>
+        <ion-item >
+          <div style="text-align: center" item-left >
+            <div *ngIf="progressTracker.report.passStep.length == progressTracker.report.count">
+              <ion-icon name="done-all" color="favorite"></ion-icon>
+            </div>
+            <div *ngIf="currentResourceType == 'report'">
+              <div *ngIf="progressTracker.report.passStep.length != progressTracker.report.count">
+                <page-loading loadingSize="small"></page-loading>
+              </div>
+            </div>
+          </div>
+          <span [color]="(currentResourceType == 'report')?'current' : 'font-color'" >
+            Load Report metadata
+          </span>
+
+          <div style="text-align: center" item-right >
+            {{ progressTracker.report.passStep.length}}/{{ progressTracker.report.count}}
+          </div>
+        </ion-item>
       </ion-list>
     </div>
   </div>
