--- a/src/pages/report-home/report-home.html
+++ b/src/pages/report-home/report-home.html
@@ -40,7 +40,7 @@
         <ion-col width="100">
           <ion-list>
             <ion-item *ngFor="let report of reportList" (click)="selectReport(report)">
-              <ion-icon name="list" item-left></ion-icon>
+              <ion-icon name="ios-folder-outline" item-left></ion-icon>
               <span >{{ report.name }}</span>
             </ion-item>
             <ion-item *ngIf = "reportList.length == 0">
