Get report parameters

--- a/src/pages/program-selection/program-selection.html
+++ b/src/pages/program-selection/program-selection.html
@@ -4,8 +4,9 @@
       Program selection selection
     </ion-title>
     <ion-buttons start>
-      <button class="normalButton" ion-button full large (click)="dismiss()">
-        <ion-icon name="md-close"></ion-icon>
+      <button class="normalButton" ion-button text-capitalize full large (click)="dismiss()">
+        close
+        <!--<ion-icon name="md-close"></ion-icon>-->
       </button>
     </ion-buttons>
   </ion-toolbar>
