--- a/src/pages/report-selection-period/report-selection-period.html
+++ b/src/pages/report-selection-period/report-selection-period.html
@@ -1,4 +1,10 @@
-<ion-header >
+<!--
+  Generated template for the ReportSelectionPeriod page.
+
+  See http://ionicframework.com/docs/v2/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+<ion-header>
   <ion-toolbar color="primary">
     <ion-title>
       Period selection
@@ -6,14 +12,13 @@
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (click)="dismiss()">
         close
-        <!--<ion-icon name="md-close"></ion-icon>-->
-
       </button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class = "periodSelection">
+
+<ion-content >
 
   <ion-grid>
     <ion-row>
@@ -37,4 +42,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
 </ion-content>
