set necessary values for report creation

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
   <script>
     dhis2.period.calendar = $.calendars.instance('gregorian');
     dhis2.period.generator = new dhis2.period.PeriodGenerator(dhis2.period.calendar, dhis2.period.DEFAULT_DATE_FORMAT);
-    //alert(JSON.stringify(dhis2));
+    ///alert(JSON.stringify(dhis2));
   </script>
 
 </head>
